# test_mujoco

./: .gitignore  1.py  MUJOCO_LOG.TXT  build.sh  compile_commands.json  openarm_single_control.urdf  readme.md  和cym的对接.md  新鲜的东西.md
mds/: mujoco.md
mujoco-3.3.7/: THIRD_PARTY_NOTICES
mujoco-3.3.7/simulate/: simulate.h
pythons/: vis_workspace.py
src/arm_msg/: CMakeLists.txt  README.md  package.xml
src/arm_msg/srv/: SetJointPositions.srv
src/engineer_26arm/: CMakeLists.txt  package.xml
src/engineer_26arm/launch/: launch.py
src/engineer_26arm/urdf/: default.rviz  openarm_single_control.urdf
src/exchanger_des/: CMakeLists.txt  package.xml  readme.md
src/exchanger_des/config/: ros2_controller.yaml
src/exchanger_des/launch/: gazebo_launch.py  launch.py
src/exchanger_des/meshes/: exchanger.STL  front_light.STL  side_light.STL
src/exchanger_des/mujuco_xml/: exchanger_scene.xml
src/exchanger_des/urdf/: default.rviz  exchanger.sdf  exchanger.urdf  exchanger.urdf.txt  exchanger_RVIZ.urdf  ros2_control.xacro
src/exchanger_des/urdf/exchanger/: exchanger.usd
src/exchanger_des/urdf/exchanger/configuration/: exchanger_base.usd  exchanger_physics.usd  exchanger_sensor.usd
src/exchanger_des/worlds/: empty.world
src/mujuco_rotating/: CMakeLists.txt  package.xml
src/mujuco_rotating/engineer_module/: arm_2025.xml  demo.xml  exchanger_arm_scene.xml  exchanger_scene.xml  tower_scene.xml
src/mujuco_rotating/engineer_module/meshes/: Link6.STL  Link7.STL  base_link.STL  engineer_v2.urdf
src/mujuco_rotating/engineer_module/meshes/arm/: Link2.STL  Link5.STL  Link6.STL  Link7.STL  LinkC.STL  engineer_v2.urdf  simple.py
src/mujuco_rotating/engineer_module/meshes/exchanger/: entry.STL
src/mujuco_rotating/include/: kinematics.hpp  mujoco_tower_class.hpp  opencv_input.hpp  recall_process.hpp  window_control.hpp
src/mujuco_rotating/launch/: launch.py
src/mujuco_rotating/src/: main.cpp  rotate_arm.txt
src/openarm/: package.xml
src/openarm_bimanual_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/openarm_bimanual_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  openarm_bimanual.srdf  openarm_bimanual.urdf.xacro  pilz_cartesian_limits.yaml  ros2_controllers.yaml  sensors_3d.yaml
src/openarm_bimanual_moveit_config/launch/: demo.launch.py
src/openarm_description/: README.md
src/openarm_hardware/: CMakeLists.txt  openarm_hardware.xml  package.xml
src/openarm_hardware/include/openarm_hardware/: v10_simple_hardware.hpp  visibility_control.h
src/openarm_hardware/src/: v10_simple_hardware.cpp
src/test_kinematics/: CMakeLists.txt  package.xml
src/test_kinematics/include/: engineer_kinematics.hpp  matplotlibcpp.h  opencv_setinput.hpp
src/test_kinematics/launch/: launch.py
src/test_kinematics/src/: main.cpp  test_kinematics_node.cpp
src/test_kinematics/src/engineer_serial/: CMakeLists.txt  engineer_serial.cpp
src/test_kinematics/src/engineer_serial/include/: engineer_serial.h
src/test_kinematics/src/engineer_serial/include/coding_struct/: data_struct.h
src/test_kinematics/src/engineer_serial/include/receive_decoder/: frame_decoder.h
src/test_kinematics/src/engineer_serial/include/serial_device/: serial_device.cpp  serial_device.h
src/test_kinematics/src/engineer_serial/serial_base/: CMakeLists.txt  serialBase.cpp  serial_com.cpp  verify.cpp
src/test_kinematics/src/engineer_serial/serial_base/include/: common.h  serialBase.h  serial_com.h  verify.h
src/test_mujoco/: CMakeLists.txt  package.xml
src/test_mujoco/engineer_module/: 1111_final.xml  111urdf.csv  111urdf.urdf  mjmodel.xml  scene.xml
src/test_mujoco/engineer_module/meshes/: L_link4.STL  L_link5.STL  R_link4.STL  R_link5.STL  base_link.STL  link0.STL  link1.STL  link2.STL  link3.STL
src/test_mujoco/include/: mujoco_ros_node.cpp  mujoco_ros_node.h
src/test_mujoco/include/matplotlib/: matplotlibcpp.h
src/test_mujoco/include/mujoco_test/: mujoco_simulator.cpp  mujoco_simulator.h
src/test_mujoco/launch/: launch.py
src/test_mujoco/mujoco-3.3.7/simulate/: camera_render.hpp  simulate.cc
src/test_mujoco/src/: main.cpp
src/test_seven_dofik/: CMakeLists.txt  package.xml
src/test_seven_dofik/config/: param.yaml
src/test_seven_dofik/include/: BIG_porject.hpp  opencv_setinput.hpp
src/test_seven_dofik/launch/: launch.py
src/test_seven_dofik/src/: main.cpp
