<?xml version="1.0"?>
<package format="3">
  <name>engineer_26arm</name>
  <version>2.0.7</version>
  <description>
    <p>URDF Description package for engineer_26arm</p>
    <p>This package contains configuration data, 3D models and launch files
for engineer_26arm robot</p>
  </description>
  <author>TODO</author>

  <maintainer email="dave@dav.ee">Dave Coleman</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <!-- <depend>engineer_msgs</depend> -->

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>